--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <img src="your-profile-image.jpg" alt="Profile Image" class="profile-img">
-    <h1>Your Name</h1>
+    <h1>EpicVK</h1>
     <p>Developer & Minecraft Server Manager</p>
     <div class="contact-info">
-      <p><i class="fa fa-envelope"></i> yourname@gmail.com</p>
-      <p><i class="fab fa-discord"></i> _yourdiscord_</p>
-      <p><i class="fa fa-map-marker-alt"></i> Your Location</p>
+      <p><i class="fa fa-envelope"></i> EpicVKe@gmail.com</p>
+      <p><i class="fab fa-discord"></i> epicvk</p>
+      <p><i class="fa fa-map-marker-alt"></i>India</p>
     </div>
   </div>
 
